feat: Get all articles for author/self
